--- a/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708/Properties/Resources.resx
+++ b/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708/Properties/Resources.resx
@@ -123,7 +123,8 @@
   </data>
   <data name="login" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  <data name="logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  </data>
+    <data name="logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">  
     <value>..\Resources\logo1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="User_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -137,7 +138,8 @@
   </data>
   <data name="login2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  <data name="Logo_ABC" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  </data>
+    <data name="Logo_ABC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo_ABC.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
